--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Simple Game of Thrones bingo webapp for Season 8",
   "main": "server.js",
   "scripts": {
-    "test": "npm run test"
+    "build": "webpack",
+    "build:watch": "webpack --progress --watch",
+    "start": "node ./server.js",
+    "test": "npm run build:watch & npm run start"
   },
   "keywords": [
     "Game",
