--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Tom Scallon",
   "license": "ISC",
   "devDependencies": {
+    "flow-bin": "^0.78.0",
     "webpack": "^4.16.0"
   },
   "dependencies": {
