--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "build:watch": "webpack --progress --watch",
-    "start": "node ./server.js",
+    "start": "node ./server/index.js",
     "test": "npm run build:watch & npm run start"
   },
   "keywords": [
@@ -24,6 +24,7 @@
     "webpack": "^4.16.0"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.4.1"
   }
 }
