--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.0.5",
     "flow-bin": "^0.78.0",
+    "node-sass": "^4.9.3",
+    "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^5.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.0",
