--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^5.3.0",
+    "prettier": "^1.14.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.0",
