--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.2"
