--- a/package.json
+++ b/package.json
@@ -21,29 +21,29 @@
   "author": "Tom Scallon",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
-    "@babel/preset-flow": "^7.0.0-rc.1",
-    "@babel/preset-react": "^7.0.0-rc.1",
-    "babel-loader": "^8.0.0-beta.4",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^1.0.0",
-    "cssnano": "^4.0.5",
+    "css-loader": "^1.0.1",
+    "cssnano": "^4.1.10",
     "flow-bin": "^0.78.0",
-    "node-sass": "^4.9.3",
-    "postcss-import": "^12.0.0",
+    "node-sass": "^4.11.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^5.3.0",
-    "prettier": "^1.14.2",
+    "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "express": "^4.16.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.2"
+    "express": "^4.16.4",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   }
 }
